--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
    <header>
        <div id="Buttons">
-          <a href="about.html">About</a>
+          <a href="index.html">News</a>
           <a href="projects.html">Projects</a>
           <a href="contact.html">Contact</a> 
        </div>
