--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,9 @@
 <body>
    <header>
        <div id="Buttons">
-          <a href="about.html">About</a>
-          <a href="projects.html">Projects</a>
-          <a href="contact.html">Contact</a> 
+         <a href="index.html">News</a>
+         <a href="about.html">About</a>
+         <a href="contact.html">Contact</a> 
        </div>
    </header>
 </body>
